# accelerate_context_engineering_workshop

./: .gitignore  BRANCH_UPDATE_PLAN.md  CONTRIBUTING.md  GEMINI.md  LEARNINGS.gemini.md  OPTIMIZATION_STRATEGY.md  README.md  REFERENCE.md  WORKSHOP_MASTER_GUIDE.md  friction_log.md  optimization_strategy.md  pyproject.toml  setup_workshop.sh  starter_pack_README.md  temp_history.json
dashboard/: README.md  dashboard.py  pyproject.toml  requirements.txt
dashboard/test_logs/: log1.json  log2.json  log3.json  log4.json  log5.json  log6.json  log7.json  log8.json
evaluation/: 00_simple_agent_interaction.py  01_agent_interaction.py  02_agent_run_eval.py  03_analyze_eval_results.py  CODE_REVIEW.md  DATASETS_GUIDE.md  METRICS_GUIDE.md  OUTPUTS.md  PR_MESSAGE.md  README.md  REFACTOR_REPORT.md  TEST_COVERAGE.md  agent_client.py  claude_alternative.md  config.py  evaluation.yml  gemini_prompt_builder.py  pyproject.toml
evaluation/datasets/: customer_service_golden.json  format_golden_data.json  retail_ai_location_strategy_golden.json
evaluation/docs/: 01-GETTING-STARTED.md  02-EVALUATION-PATHS.md  03-METRICS-GUIDE.md  04-CLI-REFERENCE.md  05-OUTPUT-FILES.md  99-DEVELOPMENT.md  ADK-DATA-EXTRACTION-ANALYSIS.md  ADK-EVAL-HISTORY-DATA-REFERENCE.md  CONTEXT-HANDOFF-MULTI-TURN-METRICS.md
evaluation/examples/: eval_summary.json  evaluation_results_consolidated.csv  example_trace.json  gemini_analysis.md  gemini_prompt.txt  interaction_consolidated.csv  processed_interaction_consolidated.csv  question_answer_log.md  session_sql_explorer-exact-1_session_6d6d5e6f-9d15-4e2d-8119-c128ffa63657.json  session_sql_explorer-exact-2-viz_session_1b9e5230-4888-4191-916b-f680a1c3b85a.json  session_sql_explorer-level3-5_session_f060d0ff-57cc-4c5b-9404-0713545100ae.json  temp_consolidated_metrics.json  temp_consolidated_questions.json  trace_sql_explorer-exact-1_session_6d6d5e6f-9d15-4e2d-8119-c128ffa63657.json  trace_sql_explorer-exact-2-viz_session_1b9e5230-4888-4191-916b-f680a1c3b85a.json  (+1 more)
(+377 files in other folders)
