[project]
name = "dashboard"
version = "0.1.0"
description = "Gradio dashboard for visualizing metric logs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=6.3.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.260113",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[tool.mypy]
# Global settings
python_version = "3.10"

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true